force-app/main/default/objects/Event_Attendee_vod__c/Event_Attendee_vod__c.object-meta.xml
<CustomObject>
    <description>This is a child object of Medical Event. One row represents a entity (Account, Contact, User) who has been invited to attended to the Medical Event. The Attendee_vod field is updated by a trigger to insure it always matches the name field of the account, contact, or user on create/update.</description>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>