force-app/main/default/objects/Event_Attendee_vod__c/fields/Account_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account acting as an Attendee.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendee_vod</relationshipName>
    <type>Lookup</type>
</CustomField>