force-app/main/default/objects/Event_Attendee_vod__c/fields/Address_Line_2_vod__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2_vod__c</fullName>
    <description>Used to store the attendee&apos;s street address.</description>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>