force-app/main/default/objects/Event_Attendee_vod__c/fields/Attendee_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_vod__c</fullName>
    <description>This field is a formula that displays the Attendee Name from the Attendee field and acts as a Link to the Event Attendee record.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id,  IF(LEN(Attendee_vod__c) &lt; 1,&quot;Attendee Link&quot;,Attendee_vod__c)  ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>