force-app/main/default/objects/Event_Attendee_vod__c/fields/Attendee_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type_vod__c</fullName>
    <description>This field defines what type of Attendee has been selected for the Event.  This formula can be modified to meet the naming conventions of a Customer&apos;s organization.</description>
    <formula>IF(LEN( Account_vod__c) &gt; 0, &quot;Account&quot;,  IF(LEN( Contact_vod__c) &gt; 0, &quot;Contact&quot;,  &quot;User&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Type</label>
    <type>Text</type>
</CustomField>