force-app/main/default/objects/Event_Attendee_vod__c/fields/Attendee_vod__c.field-meta.xml
<CustomField>
    <fullName>Attendee_vod__c</fullName>
    <description>The text of the Person that is selected either in the Account, Contact, or User Lookup.  This is populated by a Trigger on Save.</description>
    <label>Attendee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>