force-app/main/default/objects/Event_Attendee_vod__c/fields/Child_Account_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_Id_vod__c</fullName>
    <description>The textual ID of the Child Account value maintained in the Child_Account_vod field</description>
    <label>Child Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>