force-app/main/default/objects/Event_Attendee_vod__c/fields/Child_Account_vod__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the child account for the attendee</description>
    <label>Child Account</label>
    <referenceTo>Child_Account_vod__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>