force-app/main/default/objects/Event_Attendee_vod__c/fields/City_vod__c.field-meta.xml
<CustomField>
    <fullName>City_vod__c</fullName>
    <description>Used to store the attendee&apos;s city.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>