force-app/main/default/objects/Event_Attendee_vod__c/fields/Cobrowse_MC_Activity_vod__c.field-meta.xml
<CustomField>
    <fullName>Cobrowse_MC_Activity_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the reference to the CoBrowse Multichannel Activity header record</description>
    <label>CoBrowse Activity</label>
    <referenceTo>Multichannel_Activity_vod__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees_vod</relationshipName>
    <type>Lookup</type>
</CustomField>