force-app/main/default/objects/Event_Attendee_vod__c/fields/Cobrowse_URL_Participant_vod__c.field-meta.xml
<CustomField>
    <fullName>Cobrowse_URL_Participant_vod__c</fullName>
    <description>Stores the CoBrowse URL for the participant</description>
    <label>Attendee URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>