force-app/main/default/objects/Event_Attendee_vod__c/fields/Contact_vod__c.field-meta.xml
<CustomField>
    <fullName>Contact_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact attending the event.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendee_vod</relationshipName>
    <type>Lookup</type>
</CustomField>