force-app/main/default/objects/Event_Attendee_vod__c/fields/EM_Attendee_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>EM_Attendee_Type_vod__c</fullName>
    <description>Stub of the EM Attendee Type</description>
    <formula>EM_Attendee_vod__r.Attendee_Type_vod__c</formula>
    <label>EM Attendee Type</label>
    <type>Text</type>
</CustomField>