force-app/main/default/objects/Event_Attendee_vod__c/fields/EM_Attendee_vod__c.field-meta.xml
<CustomField>
    <fullName>EM_Attendee_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
    <label>Attendee</label>
    <referenceTo>EM_Attendee_vod__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees_vod</relationshipName>
    <type>Lookup</type>
</CustomField>