force-app/main/default/objects/Event_Attendee_vod__c/fields/EM_Speaker_vod__c.field-meta.xml
<CustomField>
    <fullName>EM_Speaker_vod__c</fullName>
    <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
    <formula>CASESAFEID(EM_Event_Speaker_vod__r.Speaker_vod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaker Id</label>
    <type>Text</type>
</CustomField>