force-app/main/default/objects/Event_Attendee_vod__c/fields/Email_vod__c.field-meta.xml
<CustomField>
    <fullName>Email_vod__c</fullName>
    <description>Used to store the attendee&apos;s email address.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>