force-app/main/default/objects/Event_Attendee_vod__c/fields/Entity_Reference_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Entity_Reference_Id_vod__c</fullName>
    <description>ID of object associated with the attendee such as an account.</description>
    <label>Entity Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>