force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_Comments__c.field-meta.xml
<CustomField>
    <fullName>EPD_Comments__c</fullName>
    <description>20130720 CV - UK: Created for requirement R-0186</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>