force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_Event_Attendee_Institution__c.field-meta.xml
<CustomField>
    <fullName>EPD_Event_Attendee_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>20131001 CV - UK: Created for Requirement R-0349</description>
    <label>Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Employer, KOL, Person Account, Professional, Pharmacist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Attendees (Institution)</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>