force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_External_ID__c.field-meta.xml
<CustomField>
    <fullName>EPD_External_ID__c</fullName>
    <description>needed for Historical data load</description>
    <label>EPD_External_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>