force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Address__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>19-March-2014-CV: Created for requirement R-0901</description>
    <label>Attendee Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address_vod__c.Account_vod__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account_vod__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address_vod__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>