force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_City__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_City__c</fullName>
    <formula>EPD_FR_MED_Attendee_Address__r.City_vod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee City</label>
    <type>Text</type>
</CustomField>