force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_External_ID__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_External_ID__c</fullName>
    <description>22-June-14 - CV: Created for FR MED to show the External ID of the Invitee</description>
    <formula>Account_vod__r.External_ID_vod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee External ID</label>
    <type>Text</type>
</CustomField>