force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Last_Name__c</fullName>
    <description>22-June-14 - CV: Created for FR MED to show the Last Name of Attendee</description>
    <formula>Account_vod__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Last Name</label>
    <type>Text</type>
</CustomField>