force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Organization__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Organization__c</fullName>
    <formula>Account_vod__r.Primary_Parent_vod__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Organization</label>
    <type>Text</type>
</CustomField>