force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Postal_Code__c</fullName>
    <formula>EPD_FR_MED_Attendee_Address__r.Zip_vod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Postal Code</label>
    <type>Text</type>
</CustomField>