force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_RPPS_ID__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_RPPS_ID__c</fullName>
    <description>30-March-14-CV: Created for requirement R-0648</description>
    <formula>Account_vod__r.EPD_RPPS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee RPPS ID</label>
    <type>Text</type>
</CustomField>