force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Specialty__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Specialty__c</fullName>
    <description>20-March-14-CV: Medical France, created for requirement R-0648.</description>
    <formula>Account_vod__r.OneKey_Specialty1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Specialty</label>
    <type>Text</type>
</CustomField>