force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Attendee_Title__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Attendee_Title__c</fullName>
    <description>30-March-14-CV: Created to bring the Account Title as required in requirement R-0648</description>
    <formula>TEXT( Account_vod__r.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Title</label>
    <type>Text</type>
</CustomField>