force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Date_of_Arrival__c</fullName>
    <description>19-March-2014-CV: Created for requirement R-0901</description>
    <label>Date of Arrival</label>
    <type>Date</type>
</CustomField>