force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Dinner__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Dinner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>18-March-2014-CV: Created for Medical France, Requirement R-0901</description>
    <label>Dinner?</label>
    <type>Checkbox</type>
</CustomField>