force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Email_for_Invitation__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Email_for_Invitation__c</fullName>
    <description>27-March-14-CV: Medical FR, created for sending the invitation for Global Events</description>
    <label>Email for Invitation</label>
    <type>Email</type>
</CustomField>