force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Hotel__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Hotel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>19-March-2014-CV: Medical France, created for requirement R-0922.</description>
    <label>Hotel?</label>
    <type>Checkbox</type>
</CustomField>