force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Medical_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Medical_Event_Location__c</fullName>
    <description>30-March-14-CV: Location from the Medical Event</description>
    <formula>Medical_Event_vod__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Location</label>
    <type>Text</type>
</CustomField>