force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Medical_Event_RT__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Medical_Event_RT__c</fullName>
    <formula>Medical_Event_vod__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event RT</label>
    <type>Text</type>
</CustomField>