force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Medical_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Medical_Event_Start_Date__c</fullName>
    <description>30-March-14-CV: Created per requirement R-0648</description>
    <formula>Medical_Event_vod__r.Start_Date_vod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Start Date</label>
    <type>Date</type>
</CustomField>