force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Medical_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Medical_Event_Status__c</fullName>
    <formula>TEXT(Medical_Event_vod__r.EPD_FR_MED_Event_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Status</label>
    <type>Text</type>
</CustomField>