force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Speaker__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>24-March-14-CV: Medical FR, created for Requirement R-0343</description>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>