force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Transport__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Transport__c</fullName>
    <description>19-March-2014-CV: Created for Requirement R-0901</description>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>