force-app/main/default/objects/Event_Attendee_vod__c/fields/EPD_FR_MED_Validated_by_HQ__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Validated_by_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>29-March-14-CV: Created to enable the HQ to validate the invitees.</description>
    <label>Validated by HQ</label>
    <type>Checkbox</type>
</CustomField>