force-app/main/default/objects/Event_Attendee_vod__c/fields/ES_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>ES_Is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>