force-app/main/default/objects/Event_Attendee_vod__c/fields/Expense_Attendee_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Attendee_Type_Code__c</fullName>
    <formula>IF(
TEXT(Expense_Attendee_Type_vod__c) = &quot;SYSEMP&quot;,
&quot;gWjYOjoGjt$sJTMNHtXiUK15HGwY0a&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Attendee Type Code</label>
    <type>Text</type>
</CustomField>