force-app/main/default/objects/Event_Attendee_vod__c/fields/Expense_Attendee_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Expense_Attendee_Type_vod__c</fullName>
    <description>Indicates the type of attendee. The values of this picklist should match the values available in the third-party expense system, such as Concur.</description>
    <label>Expense Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUSGUEST</fullName>
            </value>
            <value>
                <fullName>HCPROW</fullName>
                <default>true</default>
                <label>HCPROW</label>
            </value>
            <value>
                <fullName>SYSEMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>