force-app/main/default/objects/Event_Attendee_vod__c/fields/Expense_Post_Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Expense_Post_Status_vod__c</fullName>
    <description>Holds a Success or Fail status based on the attempt to post this attendee into Concur. If the attendee was not yet posted, the status will be null.</description>
    <label>Expense Post Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>