force-app/main/default/objects/Event_Attendee_vod__c/fields/First_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>First_Name_vod__c</fullName>
    <description>Used to store the attendee&apos;s first name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>