force-app/main/default/objects/Event_Attendee_vod__c/fields/Furigana_vod__c.field-meta.xml
<CustomField>
    <fullName>Furigana_vod__c</fullName>
    <description>Furigana for Japanese name. Stamped with the Furigana from the linked Attendee or Event Speaker record.</description>
    <label>Furigana</label>
    <length>100</length>
    <type>Text</type>
</CustomField>