force-app/main/default/objects/Event_Attendee_vod__c/fields/Group_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Group_Name_vod__c</fullName>
    <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
    <label>Group Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>