force-app/main/default/objects/Event_Attendee_vod__c/fields/Incurred_Expense_vod__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Expense_vod__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Attendees with the Incurred Expense checkbox checked will be posted as Attendees to Concur.</description>
    <label>Incurred Expense</label>
    <type>Checkbox</type>
</CustomField>