force-app/main/default/objects/Event_Attendee_vod__c/fields/Last_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_vod__c</fullName>
    <description>Used to store the attendee&apos;s last name</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>