force-app/main/default/objects/Event_Attendee_vod__c/fields/License_vod__c.field-meta.xml
<CustomField>
    <fullName>License_vod__c</fullName>
    <description>Used to store the attendee&apos;s license</description>
    <label>License #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>