force-app/main/default/objects/Event_Attendee_vod__c/fields/Location_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Location_Id_vod__c</fullName>
    <description>The textual ID of the Child Account&apos;s Business Account value maintained in the Location_vod field</description>
    <label>Location Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>