force-app/main/default/objects/Event_Attendee_vod__c/fields/Location_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Location_Name_vod__c</fullName>
    <description>This stores the text value of the associated Business Account. This should not be editable on Page Layouts</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>