force-app/main/default/objects/Event_Attendee_vod__c/fields/Location_vod__c.field-meta.xml
<CustomField>
    <fullName>Location_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the associated Business Account</description>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendees (Location)</relationshipLabel>
    <relationshipName>Event_Attendee_Location_vod</relationshipName>
    <type>Lookup</type>
</CustomField>