force-app/main/default/objects/Event_Attendee_vod__c/fields/Meal_Opt_In_vod__c.field-meta.xml
<CustomField>
    <fullName>Meal_Opt_In_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if an event attendee accepted a meal.</description>
    <label>Meal Opt-In</label>
    <type>Checkbox</type>
</CustomField>