force-app/main/default/objects/Event_Attendee_vod__c/fields/Medical_Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Medical_Event_Owner__c</fullName>
    <formula>Medical_Event_vod__r.Owner:User.FirstName + Medical_Event_vod__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Owner</label>
    <type>Text</type>
</CustomField>