force-app/main/default/objects/Event_Attendee_vod__c/fields/Medical_Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Medical_Event_Subtype__c</fullName>
    <formula>TEXT(Medical_Event_vod__r.EPD_FR_MED_Event_Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Subtype</label>
    <type>Text</type>
</CustomField>