force-app/main/default/objects/Event_Attendee_vod__c/fields/Medical_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Medical_Event_Type__c</fullName>
    <formula>TEXT(Medical_Event_vod__r.Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Event Type</label>
    <type>Text</type>
</CustomField>