force-app/main/default/objects/Event_Attendee_vod__c/fields/Medical_Event_vod__c.field-meta.xml
<CustomField>
    <fullName>Medical_Event_vod__c</fullName>
    <description>The Medical Event that the Account, Contact, or User is attending.</description>
    <label>Medical Event</label>
    <referenceTo>Medical_Event_vod__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendee_vod</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>