force-app/main/default/objects/Event_Attendee_vod__c/fields/Mobile_ID_vod__c.field-meta.xml
<CustomField>
    <fullName>Mobile_ID_vod__c</fullName>
    <externalId>true</externalId>
    <label>Mobile ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>