force-app/main/default/objects/Event_Attendee_vod__c/fields/MYL_Activity_ID_Primary__c.field-meta.xml
<CustomField>
    <fullName>MYL_Activity_ID_Primary__c</fullName>
    <description>KP: FR - Populated with Child Account&apos;s Ext Id which is primary parent, Null if the account is not primary for anyone as a child account</description>
    <label>Activity ID (Primary)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>