force-app/main/default/objects/Event_Attendee_vod__c/fields/MYL_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>MYL_Address_Country__c</fullName>
    <defaultValue>$User.MYL_User_Country_Code__c</defaultValue>
    <label>Address Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>