force-app/main/default/objects/Event_Attendee_vod__c/fields/MYL_Attendee_with_RPPS_ID__c.field-meta.xml
<CustomField>
    <fullName>MYL_Attendee_with_RPPS_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendee with RPPS ID</label>
    <type>Checkbox</type>
</CustomField>