force-app/main/default/objects/Event_Attendee_vod__c/fields/MYL_FR_Concur_System_Owner__c.field-meta.xml
<CustomField>
    <fullName>MYL_FR_Concur_System_Owner__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Concur System Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>