force-app/main/default/objects/Event_Attendee_vod__c/fields/Network_ID_vod__c.field-meta.xml
<CustomField>
    <fullName>Network_ID_vod__c</fullName>
    <description>The Network account acting as the attendee</description>
    <label>Network ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>