force-app/main/default/objects/Event_Attendee_vod__c/fields/Organization_vod__c.field-meta.xml
<CustomField>
    <fullName>Organization_vod__c</fullName>
    <description>Organization name of the attendee</description>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>