force-app/main/default/objects/Event_Attendee_vod__c/fields/Override_Lock_vod__c.field-meta.xml
<CustomField>
    <fullName>Override_Lock_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field for data loads.</description>
    <label>Override Lock</label>
    <type>Checkbox</type>
</CustomField>