force-app/main/default/objects/Event_Attendee_vod__c/fields/Phone_vod__c.field-meta.xml
<CustomField>
    <fullName>Phone_vod__c</fullName>
    <description>Used to store the attendee&apos;s phone number.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>