force-app/main/default/objects/Event_Attendee_vod__c/fields/Position_vod__c.field-meta.xml
<CustomField>
    <fullName>Position_vod__c</fullName>
    <description>Position event attendee held at the event</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Award_Winner_vod</fullName>
            </value>
            <value>
                <fullName>Chair_Person_vod</fullName>
            </value>
            <value>
                <fullName>Organizer_vod</fullName>
            </value>
            <value>
                <fullName>Participant_vod</fullName>
            </value>
            <value>
                <fullName>Speaker_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>