force-app/main/default/objects/Event_Attendee_vod__c/fields/Prescriber_vod__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_vod__c</fullName>
    <description>Indicates if an attendee is a prescriber or not.</description>
    <label>Prescriber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes_vod</fullName>
            </value>
            <value>
                <fullName>No_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>