force-app/main/default/objects/Event_Attendee_vod__c/fields/Role_vod__c.field-meta.xml
<CustomField>
    <fullName>Role_vod__c</fullName>
    <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>