force-app/main/default/objects/Event_Attendee_vod__c/fields/Signature_Datetime_vod__c.field-meta.xml
<CustomField>
    <fullName>Signature_Datetime_vod__c</fullName>
    <description>Stores the Datetime of when the Signature was captured</description>
    <label>Signature Datetime</label>
    <type>DateTime</type>
</CustomField>