force-app/main/default/objects/Event_Attendee_vod__c/fields/Signature_vod__c.field-meta.xml
<CustomField>
    <fullName>Signature_vod__c</fullName>
    <description>Used to store the Signature</description>
    <label>Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>