force-app/main/default/objects/Event_Attendee_vod__c/fields/Signee_vod__c.field-meta.xml
<CustomField>
    <fullName>Signee_vod__c</fullName>
    <description>When collecting a signature from a business account event attendee, the Signee free text field will appear on the signature screen if the user has FLS visibility to the field.</description>
    <label>Signee</label>
    <length>120</length>
    <type>Text</type>
</CustomField>