force-app/main/default/objects/Event_Attendee_vod__c/fields/Start_Date_vod__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_vod__c</fullName>
    <description>Start Date for the Medical Event</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>